--- a/src/containers/MainWindow/_MainWindow.scss
+++ b/src/containers/MainWindow/_MainWindow.scss
@@ -9,10 +9,10 @@
   color: #454545;
 
   & .main-header {
-    margin: 0 auto;
     text-align: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
+    margin-left: -15px;
 
     & .main-settings-icon,
     .new-tab-icon,
