--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,10 +27,10 @@ body {
   background-image: linear-gradient(to bottom, #fff, #fcfcfc);
   color: #454545; }
   .main-window .main-header {
-    margin: 0 auto;
     text-align: center;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    margin-left: -15px; }
     .main-window .main-header .main-settings-icon,
     .main-window .main-header .new-tab-icon,
     .main-window .main-header .main-close-icon {
@@ -150,7 +150,7 @@ body {
     flex: 2; }
 
 .recently-closed {
-  padding-right: calc(34px + 1rem); }
+  padding-right: calc(34px + 1.1rem); }
   .recently-closed .tab {
     opacity: 0.8;
     background-image: linear-gradient(90deg, #020202 0, #1d1d1d 51%, #454545); }
